--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -2,30 +2,26 @@
 <h1> Akila Resume</h1>
 <div class="info-head">
   <h1>Akila</h1>
-  <h2>.Net/Angular Full Stack Developer | Web Application Expertise</h2>
+  <h2>.Net Full Stack Developer</h2>
 
   <div class="info-social">
     <div class="icon">
       <span class="material-symbols-outlined all-icon"> call </span>
       <h4>+91-7397290799</h4>
     </div>
-
     <div class="icon">
       <span class="material-symbols-outlined all-icon"> alternate_email </span>
       <h4>dev.ap&#64;gmail.com</h4>
     </div>
-
     <div class="icon">
       <span class="material-symbols-outlined all-icon"> link </span>
       <h4>Linked In</h4>
     </div>
   </div>
-
   <div class="icon">
     <span class="material-symbols-outlined all-icon"> home_pin </span>
     <h4>Chennai</h4>
   </div>
 </div>
-
 
 <router-outlet/>
