Changed social icon

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,7 +1,7 @@
-
 <h1> Akila Resume</h1>
 <div class="info-head">
   <h1>Akila</h1>
+
   <h2>.Net Full Stack Developer</h2>
 
   <div class="info-social">
@@ -9,19 +9,33 @@
       <span class="material-symbols-outlined all-icon"> call </span>
       <h4>+91-7397290799</h4>
     </div>
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"> alternate_email </span>
-      <h4>dev.ap&#64;gmail.com</h4>
+  </div>
+
+    <div class="info-social">
+      <div class="icon">
+        <span class="material-symbols-outlined all-icon">call</span>
+        <h4><a href="tel:+917397290799">+91-7397290799</a></h4>
+      </div>
     </div>
+
+    <div class="info-social">
+      <div class="icon">
+        <span class="material-symbols-outlined all-icon"> alternate_email </span>
+        <a href="mailto:dev.ap@gmail.com" class="icon-link"></a>
+          <h4>dev.ap&#64;gmail.com</h4>
+      </div>
+    </div>
+
     <div class="icon">
       <span class="material-symbols-outlined all-icon"> link </span>
       <h4>Linked In</h4>
     </div>
-  </div>
+  
   <div class="icon">
     <span class="material-symbols-outlined all-icon"> home_pin </span>
     <h4>Chennai</h4>
   </div>
+
 </div>
 
-<router-outlet/>
+<router-outlet />
