Changed social icon

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="info-social">
     <div class="icon">
       <span class="material-symbols-outlined all-icon"> call </span>
-      <h4>+91-7397290799</h4>
+      <h4><i style="font-size:24px" class="fa">&#xf095;</i>+91-7397290799</h4>
     </div>
   </div>
 
