--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1> Akila Resume</h1>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="info-head">
   <h1>Akila</h1>
 
@@ -35,7 +36,6 @@
     <span class="material-symbols-outlined all-icon"> home_pin </span>
     <h4>Chennai</h4>
   </div>
-
 </div>
 
 <router-outlet />
