--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -13,22 +13,15 @@
 
 
     <div class="icon">
-      <span class="material-symbols-outlined all-icon">call</span>
-      <h4><a href="tel:+917397290799">+91-7397290799</a></h4>
-    </div>
-
-
-
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"> alternate_email </span>
+      <span class="material-symbols-outlined all-icon"> Email </span>
       <a href="mailto:dev.ap@gmail.com" class="icon-link"></a>
-      <h4>dev.ap&#64;gmail.com</h4>
+      <h4><i class="fa fa-envelope" style="font-size:48px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h4>
     </div>
 
 
     <div class="icon">
       <span class="material-symbols-outlined all-icon"> link </span>
-      <h4>Linked In</h4>
+      <h4><i class="fa fa-linkedin-square" style="font-size:48px;color:rgb(17, 117, 211)"></i>Linked In</h4>
     </div>
 
     <div class="icon">
