Changed icon sizes

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -7,26 +7,26 @@
 
   <div class="info-social">
     <div class="icon">
-      <span class="material-symbols-outlined all-icon"> call </span>
-      <h4><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h4>
+      <span class="material-symbols-outlined all-icon"></span>
+      <h3><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h3>
     </div>
 
 
     <div class="icon">
-      <span class="material-symbols-outlined all-icon"> Email </span>
+      <span class="material-symbols-outlined all-icon"></span>
       <a href="mailto:dev.ap@gmail.com" class="icon-link"></a>
-      <h4><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h4>
+      <h3><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h3>
     </div>
 
 
     <div class="icon">
-      <span class="material-symbols-outlined all-icon"> link </span>
-      <h4><i class="fa fa-linkedin-square" style="font-size:36px;color:rgb(17, 117, 211)"></i>Linked In</h4>
+      <span class="material-symbols-outlined all-icon"></span>
+      <h3><i class="fa fa-linkedin-square" style="font-size:36px;color:rgb(17, 117, 211)"></i>Linked In</h3>
     </div>
 
     <div class="icon">
-      <span class="material-symbols-outlined all-icon"> home_pin </span>
-      <h4>Chennai</h4>
+      <span class="material-symbols-outlined all-icon"></span>
+      <h3><i class="material-icons" style="font-size:36px;color:rgb(53, 11, 153)"></i>Chennai</h3>
     </div>
   </div>
 </div>
