--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1> Akila Resume</h1>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div class="info-head">
   <h1>Akila</h1>
 
