--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h1> Akila Resume 2024</h1>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <div class="info-head">
   <h1>Akila</h1>
 
@@ -27,6 +30,7 @@
 
     <div class="icon">
       <span class="material-symbols-outlined all-icon"></span>
+    
       <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)"></i>Chennai</h3>
     </div>
   </div>
