Added the place icon

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -4,6 +4,7 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+
 <div class="info-head">
   <h1>Akila</h1>
 
@@ -31,7 +32,7 @@
     <div class="icon">
       <span class="material-symbols-outlined all-icon"></span>
     
-      <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)"></i>Chennai</h3>
+      <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)">place</i>Chennai</h3>
     </div>
   </div>
 </div>
