--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,40 +1,32 @@
 <h1> Akila Resume 2024</h1>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
-<div class="info-head">
-  <h1>Akila</h1>
-
-  <h2>.Net Full Stack Developer</h2>
-
-  <div class="info-social">
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
-      <h3><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h3>
-    </div>
-
-
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
-      <a href="mailto:dev.ap@gmail.com" class="icon-link"></a>
-      <h3><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h3>
-    </div>
-
-
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
-      <h3><i class="fa fa-linkedin-square" style="font-size:36px;color:rgb(17, 117, 211)"></i>Linked In</h3>
-    </div>
-
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
-    
-      <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)">place</i>Chennai</h3>
-    </div>
+<div class="container">
+  <div>
+      <app-header></app-header>
+  </div>
+  <div class="row">
+      <div class="col">
+          <app-summary></app-summary>
+      </div>
+      <div class="col">
+          <app-project></app-project>
+      </div>
+      <div class="col">
+          <app-experience></app-experience>
+      </div>
+      <div class="col">
+          <app-achievements></app-achievements>
+      </div>
+      <div class="col">
+          <app-education></app-education>
+      </div>
+      <div class="col">
+          <app-skills></app-skills>
+      </div>
+      <div class="col">
+          <app-course></app-course>
+      </div>
   </div>
 </div>
+ 
 
-<router-outlet />
