--- a/myResume/src/app/achievements/achievements.component.html
+++ b/myResume/src/app/achievements/achievements.component.html
@@ -1,1 +1,6 @@
-<p>achievements works!</p>
+<div> <h2>SUMMARY</h2>
+    <hr>
+    <p>With 6 years of expertise in .Net and 3 years in Angular; leading a project team with commendable quality metrics; 
+        adept at creating efficient business solutions; proficient with agile methodologies; 
+        committed to crafting maintainable code.</p> 
+</div>
