Changed the homepage

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -5,6 +5,7 @@
       <app-header></app-header>
   </div>
   <div class="row">
+    <div class="col-6">
       <div class="col">
           <app-summary></app-summary>
       </div>
@@ -26,6 +27,7 @@
       <div class="col">
           <app-course></app-course>
       </div>
+    </div>
   </div>
 </div>
  
