--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1> Akila Resume 2024</h1>
 
-<div class="grid-container">
+<div class="container">
   <div>
       <app-header></app-header>
   </div>
