--- a/myResume/src/app/project/project.component.html
+++ b/myResume/src/app/project/project.component.html
@@ -1,1 +1,17 @@
-<p>project works!</p>
+<div class="projects-container">
+    <h2>PROJECTS</h2>
+    <hr>
+    <br>
+    <h4>Contribution to Open Source Accounting Tool</h4>
+    <li>Enhanced features and fixed critical bugs for an open-source accounting software - see the contributions at github.com/accounting-software</li>
+    <br>
+    <hr class="proj-hr2">
+    <br>
+    <h4>Development of Community Resource Platform</h4>
+      <li>Developed key functionalities for a web-based community resource sharing platform - check the repository at github.com/community-resource</li>
+    <br>
+  </div>
+  
+  
+
+  
