--- a/myResume/src/app/course/course.component.html
+++ b/myResume/src/app/course/course.component.html
@@ -1,1 +1,12 @@
-<p>course works!</p>
+<div class="course-container">
+    <h2>COURSES</h2>
+    <hr>
+    <h4>Advanced .NET Programming</h4>
+    <p>Focused on enhancing .NET development skills, by Microsoft Certified Trainers.</p>
+    <hr class="proj-hr2">
+    <h4>Pro Angular Certification</h4>
+    <p>Comprehensive training on Angular 2 and above, including industry best practices, by Angular Academy.</p>
+    <br>
+    <br>
+    <br>
+</div>
