--- a/myResume/src/app/skills/skills.component.html
+++ b/myResume/src/app/skills/skills.component.html
@@ -1,1 +1,14 @@
-<p>skills works!</p>
+  
+  <div class="skills-container">
+    <h2>Skills</h2>
+    <hr>
+   
+    <ul>
+      <li>C#</li>
+      <li>.NET Core</li>
+      <li>Angular 2+</li>
+      <li>HTML5</li>
+      <li>CSS</li>
+      <li>SAAS</li>
+    </ul>
+  </div>
