--- a/myResume/src/app/app.component.css
+++ b/myResume/src/app/app.component.css
@@ -1,1 +1,11 @@
+.grid-container{
 
+  display: grid;
+  height: 400px;
+  align-content: space-around;
+  grid-template-columns: auto auto auto;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+
+}
