--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,34 +1,34 @@
 <h1> Akila Resume 2024</h1>
 
 <div class="container">
-  <div>
-      <app-header></app-header>
-  </div>
-  <div class="row">
-   
-      <div class="col">
-          <app-summary></app-summary>
-      </div>
-      <div class="col">
-          <app-project></app-project>
-      </div>
-      <div class="col">
-          <app-experience></app-experience>
-      </div>
-      <div class="col">
-          <app-achievements></app-achievements>
-      </div>
-      <div class="col">
-          <app-education></app-education>
-      </div>
-      <div class="col">
-          <app-skills></app-skills>
-      </div>
-      <div class="col">
-          <app-course></app-course>
-      </div>
-    
-  </div>
-</div>
- 
+    <div>
+        <app-header></app-header>
+    </div>
+    <div class="grid-container">
+        <div class="row">
 
+            <div class="col">
+                <app-summary></app-summary>
+            </div>
+            <div class="col">
+                <app-project></app-project>
+            </div>
+            <div class="col">
+                <app-experience></app-experience>
+            </div>
+            <div class="col">
+                <app-achievements></app-achievements>
+            </div>
+            <div class="col">
+                <app-education></app-education>
+            </div>
+            <div class="col">
+                <app-skills></app-skills>
+            </div>
+            <div class="col">
+                <app-course></app-course>
+            </div>
+
+        </div>
+    </div>
+</div>
