Added css styles2

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -6,25 +6,25 @@
     </div>
     <div class="grid-container">
         
-            <div class="col">
+            <div class="col-md-6">
                 <app-summary></app-summary>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <app-project></app-project>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <app-experience></app-experience>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <app-achievements></app-achievements>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <app-education></app-education>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <app-skills></app-skills>
             </div>
-            <div class="col">
+            <div class="col-md-6">
                 <app-course></app-course>
             </div>
 
