--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1> Akila Resume 2024</h1>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 
 <div class="container">
     <div>
