--- a/myResume/src/app/app.component.css
+++ b/myResume/src/app/app.component.css
@@ -10,3 +10,10 @@
     padding: 30px; /* Optional: Add padding for spacing */
     border: 1px solid #dee2e6; /* Optional: Add border for visual separation */
 }
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+  
