--- a/myResume/src/app/app.component.css
+++ b/myResume/src/app/app.component.css
@@ -11,9 +11,9 @@
     border: 1px solid #dee2e6; /* Optional: Add border for visual separation */
 }
 .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
+    background-color: rgba(255, 255, 255, 0.199);
+    text-align: left;
     padding: 20px 0;
-    font-size: 10px;
+    font-size: 20px;
   }
   
