--- a/myResume/src/app/summary/summary.component.css
+++ b/myResume/src/app/summary/summary.component.css
@@ -1,5 +1,5 @@
 .container {
-    font-family: Roboto, sans-serif;
+    font-family: 'Times New Roman', sans-serif;
     font-weight: 300;
     line-height: 21px;
     margin: 10px 0 19px;
