Modify the styles

--- a/myResume/src/app/experience/experience.component.html
+++ b/myResume/src/app/experience/experience.component.html
@@ -19,7 +19,7 @@
         <h4>Software Engineer</h4>
         <p>Innovative Coding Inc.</p>
         <ul>
-          <li>Please let me know if there’s anything else I can assist you with! 😊</li>
+          <li>Please let me know if there’s anything else I can assist you with!</li>
         </ul>
        <ul>
         <li>Assisted in the development of web services which enabled seamless integration with third-party services, enhancing system interoperability</li>
