--- a/myResume/src/app/app.component.css
+++ b/myResume/src/app/app.component.css
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 2fr 2fr; /* Creates two equal-width columns */
-    gap: 16px; /* Adjusts the space between grid items */
+    gap: 10px; /* Adjusts the space between grid items */
     padding: 16px; /* Adds padding around the grid container */
 }
 
@@ -13,7 +13,7 @@
 .grid-container > div {
     background-color: rgba(255, 255, 255, 0.199);
     text-align: left;
-    padding: 20px 0;
+    padding: 10px ;
     font-size: 20px;
   }
   
