--- a/myResume/src/app/header/header.component.html
+++ b/myResume/src/app/header/header.component.html
@@ -12,8 +12,9 @@
 
   <div class="info-social">
     <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
+      <span>
       <h3><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h3>
+    </span>
     </div>
 
 
