--- a/myResume/src/app/header/header.component.html
+++ b/myResume/src/app/header/header.component.html
@@ -14,8 +14,8 @@
     <div class="icon">
       <span>
       <h3><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h3>
-      <h3><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h3>
-    </span>
+       </span>
+       <span><h3><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h3></span>
     </div>
 
     
