--- a/myResume/src/app/header/header.component.html
+++ b/myResume/src/app/header/header.component.html
@@ -1,9 +1,8 @@
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
 <div class="info-head">
   <h1>Akila</h1>
@@ -13,22 +12,26 @@
   <div class="info-social">
     <div class="icon">
       <span>
-      <h3><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h3>
-       </span>
-       <span><h3><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h3></span>
+        <h3><i style="font-size:36px" class="fa">&#xf095;</i>+91-7397290799</h3>
+      </span> <br>
+      <span>
+        <h3><i class="fa fa-envelope" style="font-size:36px;color:rgb(51, 211, 198)"></i> dev.ap&#64;gmail.com</h3>
+      </span>
+      <br>
+      <br>
+      <span>
+        <h3><i class="fa fa-linkedin-square" style="font-size:36px;color:rgb(17, 117, 211)"></i>Linked In</h3>
+      </span>
+      <br>
+      <br>
+      <span>
+        <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)">place</i>Chennai</h3>
+      </span>
     </div>
 
-    
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
-      <h3><i class="fa fa-linkedin-square" style="font-size:36px;color:rgb(17, 117, 211)"></i>Linked In</h3>
-    </div>
 
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"></span>
-    
-      <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)">place</i>Chennai</h3>
-    </div>
+
+
+
   </div>
 </div>
-
