--- a/myResume/src/app/header/header.component.html
+++ b/myResume/src/app/header/header.component.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
 <div class="info-head">
-  <h1>Akila</h1>
+  <h1>Akila Peramatchi</h1>
 
   <h2>.Net Full Stack Developer</h2>
 
@@ -28,9 +28,6 @@
         <h3><i class="material-icons" style="font-size:36px;color:rgb(209, 174, 19)">place</i>Chennai</h3>
       </span>
     </div>
-
-
-
 
 
   </div>
