Modified summary stlyes

--- a/myResume/src/app/project/project.component.html
+++ b/myResume/src/app/project/project.component.html
@@ -3,12 +3,12 @@
     <hr>
     <br>
     <h4>Contribution to Open Source Accounting Tool</h4>
-    <li>Enhanced features and fixed critical bugs for an open-source accounting software - see the contributions at github.com/accounting-software</li>
+        Enhanced features and fixed critical bugs for an open-source accounting software - see the contributions at github.com/accounting-software
     <br>
     <hr class="proj-hr2">
     <br>
     <h4>Development of Community Resource Platform</h4>
-      <li>Developed key functionalities for a web-based community resource sharing platform - check the repository at github.com/community-resource</li>
+      Developed key functionalities for a web-based community resource sharing platform - check the repository at github.com/community-resource
     <br>
   </div>
   
