--- a/myResume/src/app/achievements/achievements.component.html
+++ b/myResume/src/app/achievements/achievements.component.html
@@ -1,22 +1,22 @@
 <div class="achievements-container">
     <h2>ACHIEVEMENTS</h2>
-    <hr>
+    <hr class="proj-hr">
      
-    <h4>   <span class="material-symbols-outlined achive-icon">
-        social_leaderboard
-   </span>Lead Developer of Award-Winning Software</h4>
-      <li>Spearheaded the development of an award-winning educational application, seeing a user growth to 50,000+ within the first year.</li><hr class="proj-hr2">
-      <h4>   <span class="material-symbols-outlined achive-icon">
-        star
-   </span>Successful System Migration</h4>
-      <li>Managed the seamless migration of a legacy system to a modernized .NET platform, acknowledged with the Innovation in Technology award by the company.</li><hr class="proj-hr2">
-      <h4><span class="material-symbols-outlined achive-icon">
-        star_half
-   </span>High Impact Performance Optimization</h4>
-      <li>Optimized critical system processes, yielding a 30% performance increase under peak loads.</li>
+    <h4> social_leaderboard Lead Developer of Award-Winning Software</h4>
+
+      <p>Spearheaded the development of an award-winning educational application, seeing a user growth to 50,000+ within the first year.</p>
+
       <hr class="proj-hr2">
-      <h4><span class="material-symbols-outlined achive-icon">
-        flag
-   </span>Excellence in Agile Methodologies</h4>
-      <li>Championed the adoption of Agile methodologies, significantly improving team productivity by 35% within six months.</li>
+
+      <h4>Successful System Migration</h4>
+      <p>Managed the seamless migration of a legacy system to a modernized .NET platform, acknowledged with the Innovation in Technology award by the company.</p>
+
+      <hr class="proj-hr2">
+      <h4>High Impact Performance Optimization</h4>
+      <p>Optimized critical system processes, yielding a 30% performance increase under peak loads.</p>
+
+      <hr class="proj-hr2">
+
+      <h4>Excellence in Agile Methodologies</h4>
+      <p>Championed the adoption of Agile methodologies, significantly improving team productivity by 35% within six months.</p>
       </div>
