--- a/myResume/src/app/project/project.component.html
+++ b/myResume/src/app/project/project.component.html
@@ -1,15 +1,15 @@
 <div class="projects-container">
     <h2>PROJECTS</h2>
-    <hr>
-    <br>
+    <hr class="proj-hr">
+    
     <h4>Contribution to Open Source Accounting Tool</h4>
-        Enhanced features and fixed critical bugs for an open-source accounting software - see the contributions at github.com/accounting-software
-    <br>
+        <p>Enhanced features and fixed critical bugs for an open-source accounting software - see the contributions at github.com/accounting-software</p>
+    
     <hr class="proj-hr2">
-    <br>
+    
     <h4>Development of Community Resource Platform</h4>
-      Developed key functionalities for a web-based community resource sharing platform - check the repository at github.com/community-resource
-    <br>
+      <p>Developed key functionalities for a web-based community resource sharing platform - check the repository at github.com/community-resource</p>
+    
   </div>
   
   
