--- a/myResume/src/app/skills/skills.component.html
+++ b/myResume/src/app/skills/skills.component.html
@@ -2,13 +2,11 @@
   <div class="skills-container">
     <h2>Skills</h2>
     <hr>
-   
-    <ul>
-      <li>C#</li>
-      <li>.NET Core</li>
-      <li>Angular 2+</li>
-      <li>HTML5</li>
-      <li>CSS</li>
-      <li>SAAS</li>
-    </ul>
+   <div class="skill-list">
+   <h3 class="skill-item-name">C#</h3>
+   <h3 class="skill-item-name">.NET Core</h3>
+   <h3 class="skill-item-name">Angular</h3>
+   <h3 class="skill-item-name">HTML 5</h3>
+   <h3 class="skill-item-name">CSS</h3>
+  </div>
   </div>
