--- a/myResume/src/app/education/education.component.html
+++ b/myResume/src/app/education/education.component.html
@@ -1,13 +1,13 @@
 <div class="education-container">
     <h2>EDUCATION</h2>
     <hr>
-    <p>Master of Science in Computer Science</p>
+    <h3>Master of Science in Computer Science</h3>
     <h4>Georgetown University</h4>
     <p>01/2010 - 01/2012</p>
     <p>Washington, D.C.</p>
     <hr class="proj-hr2">
-    <p>Bachelor of Science in Information Technology</p>
+    <h3>Bachelor of Science in Information Technology</h3>
     <h4>Virginia Tech</h4>
- <p>01/2006 - 01/2010</p>
+    <p>01/2006 - 01/2010</p>
     <p>Blacksburg, VA</p>
   </div>
