--- a/myResume/src/app/experience/experience.component.html
+++ b/myResume/src/app/experience/experience.component.html
@@ -1,30 +1,28 @@
 <div class="experience-container">
     <h2>EXPERIENCE</h2>
     <hr>
-    <h4>Senior Net Developer</h4>
-    <p>Techno Innovative Solutions - Washington D.C.</p>
+    <h3>Senior Net Developer</h3>
+    <h4>Techno Innovative Solutions - Washington D.C.</h4>
     <ul>
       <li>Led a team of 5 developers on a .NET application resulting in a 20% increase in application efficiency amidst customer satisfaction.</li>
       <li>Implemented responsive design using CSS3 & HTML5 enhancing code quality resulting in system efficiency improvement.</li>
       <li>Implemented continuous integration & deployment practices leading to a 25% reduction in deployment errors & faster releases.</li>
     </ul>
     <hr class="proj-hr2">
-    <h4>Full Stack Developer</h4>
-        <p>Global Tech Solutions - Arlington VA</p>
+    <h3>Full Stack Developer</h3>
+        <h4>Global Tech Solutions - Arlington VA</h4>
         <ul>
           <li>Developed “Techie,” an e-commerce site for a high-traffic e-commerce platform optimizing business operations by 50%.</li>
           <li>Designed & implemented SEO strategy driving website traffic by over 200%, ensuring online sales revenue generation.</li>
         </ul>
         <hr class="proj-hr2">
-        <h4>Software Engineer</h4>
-        <p>Innovative Coding Inc.</p>
+        <h3>Software Engineer</h3>
+        <h4>Innovative Coding Inc.</h4>
         <ul>
           <li>Please let me know if there’s anything else I can assist you with!</li>
-        </ul>
-       <ul>
-        <li>Assisted in the development of web services which enabled seamless integration with third-party services, enhancing system interoperability</li>
-        <br>
-        <li>Established automated testing frameworks which reduced bug rates by 60% in delivered software products</li><br>
+                       <li>Assisted in the development of web services which enabled seamless integration with third-party services, enhancing system interoperability</li>
+        
+        <li>Established automated testing frameworks which reduced bug rates by 60% in delivered software products</li>
         <li>Implemented new features in an accounting software used by 500+ clients, improving financial reporting accuracy</li>
        </ul>  </div>
  
