finished css styles

--- a/myResume/src/app/app.component.html
+++ b/myResume/src/app/app.component.html
@@ -4,29 +4,46 @@
         <app-header></app-header>
     </div>
     <div class="grid-container">
-        
-            <div class="col-md-6">
-                <app-summary></app-summary>
-            </div>
-            <div class="col-md-6">
-                <app-project></app-project>
-            </div>
-            <div class="col-md-6">
-                <app-experience></app-experience>
-            </div>
-            <div class="col-md-6">
-                <app-achievements></app-achievements>
-            </div>
-            <div class="col-md-6">
-                <app-education></app-education>
-            </div>
-            <div class="col-md-6">
-                <app-skills></app-skills>
-            </div>
-            <div class="col-md-6">
-                <app-course></app-course>
-            </div>
 
+       <div class="gird-item">
+        <div class="container">
+            <app-summary></app-summary>
+        </div>
+       </div>
+
+       <div class="gird-item">
+        <div class="container">
+            <app-project></app-project>
+        </div>
+       </div>
+       <div class="gird-item">
+        <div class="container">
+            <app-experience></app-experience>
+        </div>
+       </div>
+
+       <div class="gird-item">
+        <div class="container">
+            <app-achievements></app-achievements>
+        </div>
+       </div>
+       <div class="gird-item">
+        <div class="container">
+            <app-education></app-education>
+        </div>
+       </div>
+       <div class="gird-item">
+        <div class="container">
+            <app-skills></app-skills>
+        </div>
+       </div>
+       <div class="gird-item">
+        <div class="container">
+            <app-course></app-course>
+        </div>
+       </div>
+                   
+       
         
     </div>
 </div>
