--- a/myResume/src/app/course/course.component.html
+++ b/myResume/src/app/course/course.component.html
@@ -1,6 +1,6 @@
 <div class="course-container">
     <h2>COURSES</h2>
-    <hr>
+    <hr class="proj-hr1">
     <h4>Advanced .NET Programming</h4>
     <p>Focused on enhancing .NET development skills, by Microsoft Certified Trainers.</p>
     <hr class="proj-hr2">
