--- a/myResume/src/app/experience/experience.component.html
+++ b/myResume/src/app/experience/experience.component.html
@@ -1,6 +1,6 @@
 <div class="experience-container">
     <h2>EXPERIENCE</h2>
-    <hr>
+    <hr class="proj-hr1">
     <h3>Senior Net Developer</h3>
     <h4>Techno Innovative Solutions - Washington D.C.</h4>
     <ul>
