--- a/myResume/src/app/app.component.css
+++ b/myResume/src/app/app.component.css
@@ -1,20 +1,22 @@
 .grid-container {
     display: grid;
-    grid-template-columns: 2fr 2fr; /* Creates two equal-width columns */
+    grid-template-columns: auto auto; /* Creates two equal-width columns */
     gap: 10px; /* Adjusts the space between grid items */
-    padding: 16px; /* Adds padding around the grid container */
-   background-color: white;
+    background-color: white;
+    padding: 30px;
+    
 }
 
-.col {
-    background-color: #f8f9fa; /* Optional: Add background color to distinguish columns */
-    padding: 1rem; /* Optional: Add padding for spacing */
-    border: 1px solid #dee2e6; /* Optional: Add border for visual separation */
+.grid-item {
+    padding: 0 62px;
 }
-.grid-container > div {
-    background-color: rgba(255, 255, 255, 0.199);
-    text-align: left;
-    padding: 10px ;
-    font-size: 20px;
+
+  .container {
+    padding: 30px;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
   }
+
   
