--- a/myResume/src/app/education/education.component.html
+++ b/myResume/src/app/education/education.component.html
@@ -1,6 +1,6 @@
 <div class="education-container">
     <h2>EDUCATION</h2>
-    <hr>
+    <hr class="proj-hr1">
     <h3>Master of Science in Computer Science</h3>
     <h4>Georgetown University</h4>
     <p>01/2010 - 01/2012</p>
