--- a/myResume/src/app/header/header.component.css
+++ b/myResume/src/app/header/header.component.css
@@ -1,10 +1,25 @@
 .info-head {
-    background-color: #333;
+  background-color: #43589c;
     color: white;
     padding: 20px;
     border-radius: 5px;
-    
-   
+    font-family: Roboto, sans-serif;
+     
+  }
+
+  h3 {
+    color: #fff;
+    margin: 0;
+    font-weight: 400;
+    font-style: normal;
+    padding: 5px 100px 10px 0;
+    font-family: Roboto, sans-serif;
+  }
+
+  h1{
+    margin: 50px 0 0;
+    font-size: 50px;
+    font-weight: 400;
   }
   
   .info-head h1 {
@@ -14,7 +29,10 @@
   }
   
   .info-head h2 {
-    font-size: 1.5em;
+    margin: 0;
+    font-weight: 400;
+    font-style: normal;
+    padding: 5px 0;
   }
   
   .info-social {
