--- a/myResume/src/app/skills/skills.component.css
+++ b/myResume/src/app/skills/skills.component.css
@@ -2,15 +2,13 @@
 .skills-container{
 
     padding: 29px;
-    background-color: #f8f9fa; /* Light grey background */
     border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     margin: 20px auto; /* Center the container with margin */
     max-width: 900px; /* Maximum width for readability */
 }
 
 h2{
-    color: rgba(11, 15, 14, 0.87);
+    color: #524447;
     margin: 0;
     font-size: 24px; /* Adjust font size */
     font-family: Rubik, sans-serif;
