--- a/myResume/src/app/education/education.component.html
+++ b/myResume/src/app/education/education.component.html
@@ -2,12 +2,12 @@
     <h2>EDUCATION</h2>
     <hr class="proj-hr1">
     <h3>Master of Science in Computer Science</h3>
-    <h4>Georgetown University</h4>
-    <p>01/2010 - 01/2012</p>
-    <p>Washington, D.C.</p>
+    <h4>Bishop Heber College</h4>
+    <p>01/2011 - 01/2013</p>
+    <p>Trichy, TN.</p>
     <hr class="proj-hr2">
     <h3>Bachelor of Science in Information Technology</h3>
-    <h4>Virginia Tech</h4>
-    <p>01/2006 - 01/2010</p>
-    <p>Blacksburg, VA</p>
+    <h4>Bishop Heber College </h4>
+    <p>01/2007 - 01/2010</p>
+    <p>Trichy, TN</p>
   </div>
