--- a/myResume/src/app/achievements/achievements.component.html
+++ b/myResume/src/app/achievements/achievements.component.html
@@ -1,22 +1,66 @@
+<head>
+
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+</head>
+
+
 <div class="achievements-container">
-    <h2>ACHIEVEMENTS</h2>
-    <hr class="proj-hr">
-     
-    <h4> social_leaderboard Lead Developer of Award-Winning Software</h4>
+  <h2>ACHIEVEMENTS</h2>
+  <hr class="proj-hr">
 
-      <p>Spearheaded the development of an award-winning educational application, seeing a user growth to 50,000+ within the first year.</p>
+    <div class="grid-container">
+        <div>
+         <span class="material-symbols-outlined achive-icon">social_leaderboard</span>
+        </div>
+        <div>
+          <h4>Lead Developer of Award-Winning Software</h4>             
+          <p>Spearheaded the development of an award-winning educational application, seeing a user growth to 50,000+ within the first year.</p>
+          </div>
+    </div>
 
-      <hr class="proj-hr2">
 
-      <h4>Successful System Migration</h4>
-      <p>Managed the seamless migration of a legacy system to a modernized .NET platform, acknowledged with the Innovation in Technology award by the company.</p>
 
-      <hr class="proj-hr2">
-      <h4>High Impact Performance Optimization</h4>
-      <p>Optimized critical system processes, yielding a 30% performance increase under peak loads.</p>
+<hr class="proj-hr2">
 
-      <hr class="proj-hr2">
+<div class="grid-container">
+  <div>
+   <span class="material-symbols-outlined achive-icon">star</span>
+  </div>
+  <div>
+    <h4>Successful System Migration</h4>             
+    <p>Managed the seamless migration of a legacy system to a modernized .NET platform, acknowledged with the Innovation in Technology award by the company.</p>
+    </div>
+</div>
 
-      <h4>Excellence in Agile Methodologies</h4>
-      <p>Championed the adoption of Agile methodologies, significantly improving team productivity by 35% within six months.</p>
-      </div>
+
+<hr class="proj-hr2">
+
+<div class="grid-container">
+  <div>
+   <span class="material-symbols-outlined achive-icon">star_half</span>
+  </div>
+  <div>
+    <h4>High Impact Performance Optimization</h4>             
+    <p>Optimized critical system processes, yielding a 30% performance increase under peak loads.</p>
+    </div>
+</div>
+
+
+
+
+
+
+<hr class="proj-hr2">
+<div class="grid-container">
+  <div>
+   <span class="material-symbols-outlined achive-icon">flag</span>
+  </div>
+  <div>
+<h4>Excellence in Agile Methodologies</h4>
+<p>Championed the adoption of Agile methodologies, significantly improving team productivity by 35% within six months.
+</p>
+</div>
+
+</div>
+
