--- a/myResume/src/app/experience/experience.component.css
+++ b/myResume/src/app/experience/experience.component.css
@@ -1,8 +1,6 @@
 .experience-container{
     padding: 29px;
-
     border-radius: 8px; /* Rounded corners */
-   
     margin: 20px auto; /* Center the container with margin */
     max-width: 900px; /* Maximum width for readability */
 }
@@ -30,7 +28,8 @@ h4 {
     font-size: 18px; /* Adjust font size */
     text-align: left; /* Center-align the heading */
 }
-h3{
+
+h3 {
     color: #524447;
     margin: 0;
     font-family: Roboto, sans-serif;
@@ -56,4 +55,43 @@ ul li {
     margin: 10px 0;
 
 }
+.info-social{
+    display: flex;
+}
+.icon{
+    display: flex;
+    align-items: center;
+    }
+    .all-icon{
+    margin: 0;
+    color: #7c7c7c;
+    padding: 0;
+    }
+
+   .material-symbols-outlined  {
+        font-family: 'Material Symbols Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+    }
+
+    .exp-workInfo {
+        margin: 0;
+        padding: 0 53px 0 0;
+    }
+    p {
+        font-family: Roboto, sans-serif;
+        font-weight: 300;
+        line-height: 21px;
+        margin: 10px 0 19px;
+    }
 
