--- a/myResume/src/app/experience/experience.component.html
+++ b/myResume/src/app/experience/experience.component.html
@@ -3,6 +3,16 @@
   <hr class="proj-hr1">
   <h3>Senior Net Developer</h3>
   <h4>Techno Innovative Solutions - Washington D.C.</h4>
+  <span class="info-social">
+    <div class="icon">
+      <span class="material-symbols-outlined all-icon"> calendar_month </span>
+      <p class="exp-workInfo">01/2019 - Present</p>
+    </div>
+    <div class="icon">
+      <span class="material-symbols-outlined all-icon"> location_on </span>
+      <p class="exp-workInfo">Washington, D.C.</p>
+    </div>
+  </span>
   <ul>
     <li>Led a team of 5 developers on a .NET application resulting in a 20% increase in application efficiency amidst
       customer satisfaction.</li>
@@ -12,22 +22,23 @@
       faster releases.</li>
   </ul>
 
-  <span class="info-social">
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"> calendar_month </span>
-      <p class="exp-workInfo">01/2019 Present</p>
-    </div>
-    <div class="icon">
-      <span class="material-symbols-outlined all-icon"> location_on </span>
-      <p class="exp-workInfo">Washington, D.C.</p>
-    </div>
-  </span>
+ 
 
 
 
   <hr class="proj-hr2">
   <h3>Full Stack Developer</h3>
   <h4>Global Tech Solutions - Arlington VA</h4>
+  <span class="info-social">
+    <div class="icon">
+      <span class="material-symbols-outlined all-icon"> calendar_month </span>
+      <p class="exp-workInfo">01/2017 - 2019</p>
+    </div>
+    <div class="icon">
+      <span class="material-symbols-outlined all-icon"> location_on </span>
+      <p class="exp-workInfo">Washington, D.C.</p>
+    </div>
+  </span>
   <ul>
     <li>Developed “Techie,” an e-commerce site for a high-traffic e-commerce platform optimizing business operations by
       50%.</li>
@@ -37,6 +48,16 @@
   <hr class="proj-hr2">
   <h3>Software Engineer</h3>
   <h4>Innovative Coding Inc.</h4>
+  <span class="info-social">
+    <div class="icon">
+      <span class="material-symbols-outlined all-icon"> calendar_month </span>
+      <p class="exp-workInfo">01/2014 -04/2017</p>
+    </div>
+    <div class="icon">
+      <span class="material-symbols-outlined all-icon"> location_on </span>
+      <p class="exp-workInfo">Washington, D.C.</p>
+    </div>
+  </span>
   <ul>
     <li>Please let me know if there’s anything else I can assist you with!</li>
     <li>Assisted in the development of web services which enabled seamless integration with third-party services,
