--- a/myResume/src/app/summary/summary.component.css
+++ b/myResume/src/app/summary/summary.component.css
@@ -25,8 +25,14 @@ hr {
 
 
 p {
+
+             
+       
+    color: #333; /* Dark grey text color */
+
     font-family: Roboto, sans-serif;
     font-weight: 300;
     line-height: 21px;
     margin: 10px 0 19px;
+    font-size: 17px;
 }
