--- a/myResume/src/app/project/project.component.css
+++ b/myResume/src/app/project/project.component.css
@@ -11,11 +11,12 @@ h2 {
     text-align: left; /* Center-align the heading */
     font-family: Rubik, sans-serif;
 }
-h4 {
+h3 {
     margin-bottom: 0;
     color: #524447;
     font-family: Roboto, sans-serif;
     font-weight: 500;
+    font-size: 18.72px;
 }
 
 
