--- a/myResume/src/app/skills/skills.component.css
+++ b/myResume/src/app/skills/skills.component.css
@@ -23,6 +23,15 @@ hr{
 .skill-list{
     display: grid;
     grid-template-columns: auto auto auto auto;
+    color: #333;
+    box-shadow: #333;
+}
+.skill-item-name{
+    border-bottom: 2px solid darkgray;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    padding: 0 0 10px;
 }
 
 
